--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -1,79 +1,38 @@
 <odoo>
 
-    <record id="view_partner_form_commission" model="ir.ui.view">
-        <field name="name">res.partner.form.commission</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
+     <!-- Inherit the existing employee form view to add new fields -->
+    <record id="view_hr_employee_form_inherit_training" model="ir.ui.view">
+        <field name="name">hr.employee.form.inherit.training</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='category_id']" position="after">
-                <field name="is_commissioner"/>
-            </xpath>
+            <notebook position="inside">
+                <!-- Add a new page for Training Records -->
+                <page string="Training Records">
+                    <field name="training_record_ids" context="{'default_employee_id': active_id}">
+                        <tree string="Training Records">
+                            <field name="course_id"/>
+                            <field name="completion_date"/>
+                            <field name="result"/>
+                        </tree>
+                        <form string="Training Record">
+                            <sheet>
+                                <group>
+                                    <field name="course_id"/>
+                                    <field name="completion_date"/>
+                                    <field name="trainer"/>
+                                    <field name="result"/>
+                                    <field name="certificate_attachment"/>
+                                </group>
+                            </sheet>
+                        </form>
+                    </field>
+                </page>
+                <!-- Add a new page for Skills -->
+                <page string="Skills">
+                    <field name="skill_ids" widget="many2many_tags"/>
+                </page>
+            </notebook>
         </field>
     </record>
-
-     <record id="product_normal_form_view" model="ir.ui.view">
-        <field name="name">product.product.view.form.inherit.commission</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_normal_form_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//label[@for='purchase_ok']"
-                   position="after">
-                <field name="is_consignment"/>
-                <field name="commissioner_id"/>
-                <field name="commission_percentage"/>
-            </xpath>
-        </field>
-    </record>
-
-    <record id="product_template_only_form_view" model="ir.ui.view">
-        <field name="name">product.template.only.form.view.inherit.commission</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='barcode']"
-                   position="after">
-                <field name="is_consignment"/>
-                <field name="commissioner_id"/>
-                <field name="commission_percentage"/>
-            </xpath>
-        </field>
-    </record>
-    
-    <record id="view_picking_form" model="ir.ui.view">
-        <field name="name">stock.picking.view.form.inherit.commission</field>
-        <field name="model">stock.picking</field>
-        <field name="inherit_id" ref="stock.view_picking_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='picking_type_id']"
-                   position="after">
-                <field name="is_commission"/>
-            </xpath>
-        </field>
-    </record>
-
-    <!--    Sale order inherited to add the custom field-->
-    <record id="view_order_form" model="ir.ui.view">
-        <field name="name">sale.order.view.form.inherit.sale.commission</field>
-        <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='partner_id']" position="after">
-                <field name="commissioner_id"/>
-            </xpath>
-        </field>
-    </record>
-
-    <!--    Purchase order inherited to add the custom field-->
-    <record id="purchase_order_form" model="ir.ui.view">
-        <field name="name">purchase.order.view.form.inherit.purchase.commission</field>
-        <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="purchase.purchase_order_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='partner_id']" position="after">
-                <field name="commissioner_id"/>
-                <field name="is_commissioned"/>
-            </xpath>
-        </field>
-    </record>
-
 </odoo>
