--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -8,29 +8,79 @@
         <field name="arch" type="xml">
             <notebook position="inside">
                 <!-- Add a new page for Training Records -->
-                <page string="Training Records">
-                    <field name="training_record_ids" context="{'default_employee_id': active_id}">
-                        <tree string="Training Records">
-                            <field name="course_id"/>
-                            <field name="completion_date"/>
-                            <field name="result"/>
+                <page string="Training Courses">
+                    <field name="training_course_ids" context="{'default_employee_id': active_id}">
+                        <tree string="Training Courses">
+                            <field name="name"/>
+                            <field name="description"/>
+                            <field name="duration"/>
+                            <field name="category_id"/>
                         </tree>
-                        <form string="Training Record">
+                        <form string="Training Courses">
                             <sheet>
                                 <group>
-                                    <field name="course_id"/>
-                                    <field name="completion_date"/>
-                                    <field name="trainer"/>
-                                    <field name="result"/>
-                                    <field name="certificate_attachment"/>
+                                    <field name="name"/>
+                                    <field name="description"/>
+                                    <field name="duration"/>
+                                    <field name="category_id"/>
                                 </group>
                             </sheet>
                         </form>
                     </field>
                 </page>
-                <!-- Add a new page for Skills -->
+                <page string="Training Plans">
+                    <field name="training_plan_ids" context="{'default_employee_id': active_id}">
+                    <tree string="Training Plans">
+                        <field name="name"/>
+                        <!-- <field name="employee_id"/> -->
+                        <field name="due_date"/>
+                        <field name="progress"/>
+                    </tree>
+                    <form string="Training Plans">
+                        <sheet>
+                            <group>
+                                <field name="name"/>
+                                <!-- <field name="employee_id"/> -->
+                                <field name="role_id"/>
+                                <field name="course_ids" widget="many2many_tags"/>
+                                <field name="due_date"/>
+                                <field name="progress"/>
+                            </group>
+                        </sheet>
+                    </form>
+                    </field>
+                </page>
+               <!-- <page>
+                     <form string="Training Plan">
+                        <sheet>
+                            <group>
+                                <field name="name"/>
+                                <field name="employee_id"/>
+                                <field name="role_id"/>
+                                <field name="course_ids" widget="many2many_tags"/>
+                                <field name="due_date"/>
+                                <field name="progress"/>
+                            </group>
+                        </sheet>
+                    </form> 
+                </page>-->
+                <!-- Add a new page for Skills-->
                 <page string="Skills">
-                    <field name="skill_ids" widget="many2many_tags"/>
+                    <field name="skill_ids" context="{'default_employee_id': active_id}">
+                    <tree string="Skills">
+                        <!-- <field name="employee_id"/> -->
+                        <field name="description"/>
+                    </tree>
+                    <form string="Training Courses">
+                        <sheet>
+                            <group>
+                                <!-- <field name="employee_id"/> -->
+                                <field name="description"/>
+                                <field name="course_ids"/>
+                            </group>
+                        </sheet>
+                    </form>
+                    </field>
                 </page>
             </notebook>
         </field>
