--- a/views/training_course_views.xml
+++ b/views/training_course_views.xml
@@ -1,15 +1,15 @@
 <odoo>
-<record id="view_training_course_form" model="ir.ui.view">
+<!-- <record id="view_training_course_form" model="ir.ui.view">
         <field name="name">training.course.form</field>
         <field name="model">training.course</field>
         <field name="arch" type="xml">
-            <form string="Training Course">
+            <form string="Training Courses">
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="description"/>
                         <field name="duration"/>
-                        <field name="category_id"/>
+                        <field name="category"/>
                     </group>
                 </sheet>
             </form>
@@ -21,10 +21,11 @@
         <field name="model">training.course</field>
         <field name="arch" type="xml">
             <tree string="Training Courses">
-                <field name="name"/>
-                <field name="duration"/>
-                <field name="category_id"/>
+                <field name="employee_id"/>
+                <field name="course_id"/>
+                <field name="completion_date"/>
+                <field name="result"/>
             </tree>
         </field>
-    </record>
+    </record> -->
 </odoo>
