--- a/views/training_record_views.xml
+++ b/views/training_record_views.xml
@@ -1,7 +1,7 @@
 <odoo>
-   <record id="view_training_record_form" model="ir.ui.view">
-        <field name="name">training.record.form</field>
-        <field name="model">training.record</field>
+   <!-- <record id="view_training_course_form" model="ir.ui.view">
+        <field name="name">training.course.form</field>
+        <field name="model">training.course</field>
         <field name="arch" type="xml">
             <form string="Training Record">
                 <sheet>
@@ -18,17 +18,17 @@
         </field>
     </record>
 
-    <record id="view_training_record_tree" model="ir.ui.view">
-        <field name="name">training.record.tree</field>
-        <field name="model">training.record</field>
+    <record id="view_training_course_tree" model="ir.ui.view">
+        <field name="name">training.course.tree</field>
+        <field name="model">training.course</field>
         <field name="arch" type="xml">
-            <tree string="Training Records">
+            <tree string="Training Courses">
                 <field name="employee_id"/>
                 <field name="course_id"/>
                 <field name="completion_date"/>
                 <field name="result"/>
             </tree>
         </field>
-    </record>
+    </record> -->
     
 </odoo>
