--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -32,7 +32,6 @@
                     <field name="training_plan_ids" context="{'default_employee_id': active_id}">
                     <tree string="Training Plans">
                         <field name="name"/>
-                        <!-- <field name="employee_id"/> -->
                         <field name="due_date"/>
                         <field name="progress"/>
                     </tree>
@@ -40,7 +39,6 @@
                         <sheet>
                             <group>
                                 <field name="name"/>
-                                <!-- <field name="employee_id"/> -->
                                 <field name="role_id"/>
                                 <field name="course_ids" widget="many2many_tags"/>
                                 <field name="due_date"/>
@@ -68,13 +66,13 @@
                 <page string="Skills">
                     <field name="skill_ids" context="{'default_employee_id': active_id}">
                     <tree string="Skills">
-                        <!-- <field name="employee_id"/> -->
+                        <field name="display_name"/>
                         <field name="description"/>
                     </tree>
-                    <form string="Training Courses">
+                    <form string="Skills">
                         <sheet>
                             <group>
-                                <!-- <field name="employee_id"/> -->
+                                <field name="display_name"/>
                                 <field name="description"/>
                                 <field name="course_ids"/>
                             </group>
